; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_read.c_nfs_readhdr_alloc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_read.c_nfs_readhdr_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_read_header = type { %struct.nfs_pgio_header }
%struct.nfs_pgio_header = type { i32, i32, i32, i32 }

@nfs_rdata_cachep = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.nfs_read_header* @nfs_readhdr_alloc() #0 {
  %1 = alloca %struct.nfs_read_header*, align 8
  %2 = alloca %struct.nfs_pgio_header*, align 8
  %3 = load i32, i32* @nfs_rdata_cachep, align 4
  %4 = load i32, i32* @GFP_KERNEL, align 4
  %5 = call %struct.nfs_read_header* @kmem_cache_zalloc(i32 %3, i32 %4)
  store %struct.nfs_read_header* %5, %struct.nfs_read_header** %1, align 8
  %6 = load %struct.nfs_read_header*, %struct.nfs_read_header** %1, align 8
  %7 = icmp ne %struct.nfs_read_header* %6, null
  br i1 %7, label %8, label %23

8:                                                ; preds = %0
  %9 = load %struct.nfs_read_header*, %struct.nfs_read_header** %1, align 8
  %10 = getelementptr inbounds %struct.nfs_read_header, %struct.nfs_read_header* %9, i32 0, i32 0
  store %struct.nfs_pgio_header* %10, %struct.nfs_pgio_header** %2, align 8
  %11 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %2, align 8
  %12 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %11, i32 0, i32 3
  %13 = call i32 @INIT_LIST_HEAD(i32* %12)
  %14 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %2, align 8
  %15 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %14, i32 0, i32 2
  %16 = call i32 @INIT_LIST_HEAD(i32* %15)
  %17 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %2, align 8
  %18 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %17, i32 0, i32 1
  %19 = call i32 @spin_lock_init(i32* %18)
  %20 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %2, align 8
  %21 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %20, i32 0, i32 0
  %22 = call i32 @atomic_set(i32* %21, i32 0)
  br label %23

23:                                               ; preds = %8, %0
  %24 = load %struct.nfs_read_header*, %struct.nfs_read_header** %1, align 8
  ret %struct.nfs_read_header* %24
}

declare dso_local %struct.nfs_read_header* @kmem_cache_zalloc(i32, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @atomic_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
